<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">Not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to </string>
    <string name="title_not_connected">Not Connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_after_connect">After_connect</string>
    <string name="title_activity_reciever">Receiver</string>
    <string name="wait_for_connect">Waiting for connection</string>
    <string name="title_activity_sender">Sender</string>

    <!--receiver-->
    <string name="status_unbalance">UNBALANCE</string>
    <string name="status_balance">BALANCE</string>
    <string name="level_1">A</string>
    <string name="level_2">B</string>
    <string name="level_3">C</string>
    <string name="level_4">D</string>
    <string name="level_5">E</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="total_time">Total Time</string>
    <string name="make_discover">Discoverable</string>
    <string name="title_activity_summary">Summary</string>
</resources>
