<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/levelselector"
        android:background="@color/background_floating_material_dark"
        android:elevation="6dp">

        <Button
            android:id="@+id/start_but2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/blue_grey500"
            android:elevation="0dp"
            android:fontFamily="san"
            android:gravity="bottom|center"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>

    </RelativeLayout>

    <Chronometer
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:freezesText="true"
        android:gravity="right"
        android:padding="10dp"
        android:text="00:00:01"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff000000"
        android:textIsSelectable="false"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/levelselector"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/countdown"
        android:background="@color/c_l1"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/level1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/c_l1d"
            android:elevation="7dp"
            android:text="@string/level_1"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:theme="@style/Base.V21.Theme.AppCompat.Light"
            android:visibility="visible" />

        <Button
            android:id="@+id/level2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:elevation="7dp"
            android:text="@string/level_2"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:theme="@style/Base.V21.Theme.AppCompat.Light"/>

        <Button
            android:id="@+id/level3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:elevation="7dp"
            android:text="@string/level_3"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:theme="@style/Base.V21.Theme.AppCompat.Light"/>

        <Button
            android:id="@+id/level4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:elevation="7dp"
            android:text="@string/level_4"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:theme="@style/Base.V21.Theme.AppCompat.Light"/>

        <Button
            android:id="@+id/level5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:elevation="7dp"
            android:text="@string/level_5"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:theme="@style/Base.V21.Theme.AppCompat.Light"/>
    </LinearLayout>

    <Button
        android:id="@+id/plus_but"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/countdown"
        android:layout_gravity="center_horizontal"
        android:background="@color/clear"
        android:fontFamily="san"
        android:paddingEnd="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="20dp"
        android:text="+"
        android:textColor="@color/deep_orange500"
        android:textSize="35dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/minus_but"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/plus_but"
        android:layout_gravity="center_horizontal"
        android:layout_toEndOf="@+id/plus_but"
        android:background="@color/clear"
        android:fontFamily="san"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="-"
        android:textColor="@color/deep_orange500"
        android:textSize="40dp"
        android:visibility="visible" />

</RelativeLayout>